large SAX reading refactor
renamed GraphmlContent.X_ELEMENT_NAME => GraphmlElement.X
fixed typo in classname GioEndpointDirect___(missing i)___on
added streaming port and data handling to all API layers
ValidatingGraphmlWriter
  added more allowed parent-child relations in
  resolveHyperEdges uses a nice way to create precise error messages
SAX parsing
  Stack of open elements is now always the full stack of currently open elements
  Stack elements know, whether they have been sent to GioWriter yet or not
  character handling more careful to tolerate only whitespace where no content is expected
  Added GioDefaultEntity to represent <default> values in <key> elements
  Added AbstractGraphmlEntity to centralize a little bite
  Added Graphml-class to centralize Graphml-knowledge, especially:
    Given which XML element from SAX, which Gio-Element is now certain to be ready for sending to GioWriter?